// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Beacon > should render custom beaconComponent and skip CSS injection 1`] = `
<button
  aria-label="Open the dialog"
  class="react-joyride__beacon"
  data-testid="button-beacon"
  style="background-color: transparent; border: 0px; border-radius: 50%; color: rgb(85, 85, 85); cursor: pointer; font-size: 16px; line-height: 1; -webkit-appearance: none; display: inline-flex; position: relative;"
  title="Open the dialog"
  type="button"
>
  <span>
    <span
      class="custom-beacon__outer"
    />
    <span
      class="custom-beacon__inner"
    />
  </span>
</button>
`;

exports[`Beacon > should render the default beacon with correct structure 1`] = `
<button
  aria-label="Open the dialog"
  class="react-joyride__beacon"
  data-testid="button-beacon"
  style="background-color: transparent; border: 0px; border-radius: 50%; color: rgb(85, 85, 85); cursor: pointer; font-size: 16px; line-height: 1; -webkit-appearance: none; display: inline-flex; position: relative;"
  title="Open the dialog"
  type="button"
>
  <span
    style="height: 36px; width: 36px;"
  >
    <span
      style="animation: joyride-beacon-outer 1.2s infinite ease-in-out; background-color: rgba(255, 0, 68, 0.2); border: 2px solid rgb(255, 0, 68); border-radius: 50%; box-sizing: border-box; display: block; height: 100%; left: 0px; opacity: 0.9; position: absolute; top: 0px; transform-origin: center; width: 100%;"
    />
    <span
      style="animation: joyride-beacon-inner 1.2s infinite ease-in-out; background-color: rgb(255, 0, 68); border-radius: 50%; display: block; height: 50%; left: 50%; opacity: 0.7; position: absolute; top: 50%; transform: translate(-50%, -50%); width: 50%;"
    />
  </span>
</button>
`;
